--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MathForKids</string>
     <string name="button_start">Start</string>
+    <string name="button_score">Score</string>
     <string name="button_ach">Achievements</string>
     <string name="button_settings">Settings</string>
+
 </resources>
