--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="button_score">Score</string>
     <string name="button_ach">Achievements</string>
     <string name="button_settings">Settings</string>
+    <string name="title_activity_acheivement">AcheivementActivity</string>
 
 </resources>
