--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="button_score">Score</string>
     <string name="button_ach">Achievements</string>
     <string name="button_settings">Settings</string>
-
+    <string name="difficultyError">Must have a difficulty selected</string>
 
 </resources>
