--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="button_score">Score</string>
     <string name="button_ach">Achievements</string>
     <string name="button_settings">Settings</string>
+    <string name="button_about">About</string>
+    <string name="versionNumber">Version %s</string>
+    <string name="authors">MathForKids is created by\n\n
+    Chris Rabe\n
+    Dean Ong\n
+    Janice Chin\n
+    Megan Liang</string>
     <string name="difficultyError">Must have a difficulty selected</string>
+    <string name="title_activity_about">AboutActivity</string>
 
 </resources>
